--- a/css/new-age.css
+++ b/css/new-age.css
@@ -156,8 +156,8 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background: url("../img/bg-pattern.png"), #7b4397;
-  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+  background: url("img\fishing.jpg"), #4870A0;
+  background: url("../img/bg-pattern.png"), linear-gradient(to left, #4870A0, #dc2430);
 }
 
 header.masthead .header-content {
