--- a/css/custom.css
+++ b/css/custom.css
@@ -12,6 +12,14 @@ section.cta {
   position: relative;
   padding: 500px 0;
   background-image: url("../img/bg2.jpg");
+  background-size: cover;
   background-position: center;
   background-size: cover;
+}
+section.cta .cta-content h2 {
+  font-size: 50px;
+  max-width: 450px;
+  margin-top: 0;
+  margin-bottom: 25px;
+  color: white;
 }
