--- a/css/custom.css
+++ b/css/custom.css
@@ -21,5 +21,8 @@ section.cta .cta-content h2 {
   max-width: 450px;
   margin-top: 0;
   margin-bottom: 25px;
+  margin-left: auto;
+  margin-right: auto;
   color: white;
+  text-align: center;
 }
