--- a/css/custom.css
+++ b/css/custom.css
@@ -11,7 +11,7 @@ header.masthead {
 section.cta {
   position: relative;
   padding: 300px 0;
-  background-image: url("../img/bg2.jpg");
+  background-image: url("../img/bg3.jpg");
   background-size: cover;
   background-position: center;
   background-size: cover;
@@ -24,5 +24,5 @@ section.cta .cta-content h2 {
   margin-left: auto;
   margin-right: auto;
   color: white;
-  text-align: center;
+  text-align: bottom;
 }
