--- a/css/custom.css
+++ b/css/custom.css
@@ -26,3 +26,11 @@ section.cta .cta-content h2 {
   color: white;
   text-align: bottom;
 }
+section.cta .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
